media/css/firefox/browsers-products.scss
// This Source Code Form is subject to the terms of the Mozilla Public
// License, v. 2.0. If a copy of the MPL was not distributed with this
// file, You can obtain one at http://mozilla.org/MPL/2.0/.

$font-path: '/media/fonts';
$image-path: '/media/protocol/img';
$brand-theme: 'firefox';

@import '../../protocol/css/includes/lib';
@import '../../protocol/css/components/emphasis-box';
@import '../../protocol/css/components/split';
@import '../../protocol/css/components/zap';
@import '../protocol/components/fxa-form';
@import '../protocol/components/custom-menu-list';
@import './sticky-promo';


$send-svg: '<svg width="24px" height="24px" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd"><g transform="translate(3.000000, 1.000000)" stroke="#{$color-link-hover}" stroke-width="2"><path d="M2,16 L2,20 C2,21.1045695 2.8954305,22 4,22 L14,22 C15.1045695,22 16,21.1045695 16,20 L16,2 C16,0.8954305 15.1045695,-2.02906125e-16 14,0 L4,0 C2.8954305,2.02906125e-16 2,0.8954305 2,2 L2,6" stroke-linecap="round"></path><path d="M2,4 L16,4"></path><path d="M2,18 L16,18"></path><path d="M3.55271368e-15,11 L10,11" stroke-linecap="round" stroke-linejoin="round"></path><polyline stroke-linecap="round" stroke-linejoin="round" points="6 7 10 11 6 15"></polyline></g></g></svg>';
$send-url: svg-url($send-svg);

//* -------------------------------------------------------------------------- */
// put spacing into variables so it's easier to adjust spacing at each break point

// xs
$v-grid-xs: $layout-xs;
$h-grid-xs: $layout-xs;

//md
$v-grid-md: $layout-md;
$h-grid-md: $layout-lg;

//lg
$v-grid-lg: $layout-lg;
$h-grid-lg: $layout-xl;

//* -------------------------------------------------------------------------- */
// utility class

.hidden {
    display: none !important; /* stylelint-disable-line declaration-no-important */
}

//* -------------------------------------------------------------------------- */
// Protocol over-rides

.mzp-c-menu-list {
    // match the bottom margin of <p>
    margin-bottom: 1.25em;
}

.mzp-c-menu-list-title {
    margin-bottom: 0;
}

.mzp-t-download .mzp-c-menu-list-item.t-web a:hover:after {
    display: none;
}

.mzp-t-download .mzp-c-menu-list-item.t-getapp a:hover:after {
    background-image: $send-url;
}

// vertical spacing
main .mzp-l-content {
    padding-bottom: $v-grid-xs;
    padding-top: $v-grid-xs;

    @media #{$mq-md} {
        padding-bottom: $v-grid-md;
        padding-top: $v-grid-md;
    }

    @media #{$mq-lg} {
        padding-bottom: $v-grid-lg;
        padding-top: $v-grid-lg;
    }
}

// make buttons in drop down menus look like links
.c-menu-list-link {
    &,
    &.mzp-c-button.mzp-t-product {
        background-color: inherit;
        color: $color-link;
        display: block;
        font-family: inherit;
        font-weight: normal;
        padding: $spacing-sm 30px $spacing-sm $spacing-sm;
        border: 0;

        &:hover {
            color: $color-link-hover;
            background-color: $color-marketing-gray-20;
        }
    }

}

//* -------------------------------------------------------------------------- */
// use split component for top banner

.c-landing-banner {
    h1 {
        @include text-title-xl;
    }

    p {
        @include text-body-lg;
    }
}

//* -------------------------------------------------------------------------- */
// landing grid

.c-landing-grid-item {
    margin-bottom: $v-grid-xs * 2; // vertical spacing
    margin-left: auto;
    margin-right: auto;
    max-width: 400px;

    &:last-child {
        margin-bottom: 0;
    }

    &.c-landing-grid-wide {
        max-width: 100%;
    }

    > p:last-child {
        margin-bottom: 0;
    }
}

.c-landing-grid-title {
    @include font-size(24px);
    margin-bottom: $spacing-md;
    margin-top: $spacing-xl;

    a {
        color: $color-ink-80;
        text-decoration: none;

        &:hover,
        &:focus {
            text-decoration: underline;
        }
    }

    + p {
        margin-bottom: $spacing-xl;
    }
}

.c-landing-grid-img {
    display: block;
    margin: 0 auto;
}

@media #{$mq-sm} {
    .c-landing-grid-img {
        max-width: $content-xs;
    }
}

// two column grid for browsers that don't support display:grid
// works in RTL without bidi styles \o/
@media #{$mq-md} {
    .c-landing-grid-item {
        float: left;
        margin-bottom: $v-grid-md * 2;
        margin-left: $h-grid-md;
        max-width: 100%;
        width: calc(50% - #{$h-grid-md / 2}) ;

        &:nth-child(odd) {
            clear: left;
            margin-left: 0;
        }

        &.c-landing-grid-wide {
            width: 100%;
        }
    }
}

@media #{$mq-lg} {
    .c-landing-grid-item {
        margin-bottom: $v-grid-lg * 2;
        margin-left: $h-grid-lg;
        width: calc(50% - #{$h-grid-lg / 2}) ;
    }
}
/* ... */

